# packaging

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/tools/: sync_version.py
